--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,10 +17,10 @@ jobs:
         EC2_KEY_PUB_64: ${{ secrets.EC2_KEY_PUB_64 }}
       run: |
         mkdir -p ~/.ssh
-        echo $EC2_KEY_PEM_64 | openssl base64 -A -d > ~/.ssh/ec2_key_pair.pem 
-        chmod 400 ~/.ssh/ec2_key_pair.pem
-        echo $EC2_KEY_PUB_64 | openssl base64 -A -d > ~/.ssh/ec2_key_pair.pub
-        chmod 644 ~/.ssh/ec2_key_pair.pub
+        echo $EC2_KEY_PEM_64 | openssl base64 -A -d > ~/.ssh/grafana_key_pair.pem 
+        chmod 400 ~/.ssh/grafana_key_pair.pem
+        echo $EC2_KEY_PUB_64 | openssl base64 -A -d > ~/.ssh/grafana_key_pair.pub
+        chmod 644 ~/.ssh/grafana_key_pair.pub
     - name: Terraform init
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
